--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
 asgiref==3.7.2
-Django==4.2.6
+distlib==0.3.7
+Django==4.2.5
+et-xmlfile==1.1.0
+filelock==3.12.3
+numpy==1.26.1
+openpyxl==3.1.2
+pandas==2.1.1
+platformdirs==3.10.0
+psycopg2-binary==2.9.9
+python-dateutil==2.8.2
+pytz==2023.3.post1
+six==1.16.0
 sqlparse==0.4.4
-typing_extensions==4.8.0
+tzdata==2023.3
+virtualenv==20.24.5
